# kannasaver

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  Messages.sh  README  configure.in.in  kannasaver.kdevelop
doc/: CMakeLists.txt  Makefile.am
doc/en/: Makefile.am  index.docbook
l10n/: CMakeLists.txt  nl.po
po/: de.po  kannasaver.pot
src/: CMakeLists.txt  Makefile.am  kana.h  kanasettings.cpp  kanasettings.h  kannasaver.cpp  kannasaver.desktop  kannasaver.h  kannasaver.kcfg  kannasaver.lsm  kannasaver_settings.kcfg  kannasaverui.ui  main.cpp  preferences.kcfgc  settings.kcfgc  settingswidget.cpp  settingswidget.h  settingswidget.ui  setupdlg.cpp  setupdlg.h  setupdlgwidget.ui
